# file-sharing-tool

./: .gitignore
client/: Cargo.toml  config.json
client/src/: config.rs  main.rs  transfer.rs  watcher.rs  watcher_old.rs
server/: Cargo.toml
server/src/: endpoints.rs  main.rs  websocket.rs
