[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
figment = { version = "0.10.19", features = ["json"] }
notify = "8.0.0"
reqwest = { version = "0.12.15", features = ["multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
